--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "illuminate/support": "^8.0"
+        "php": "^8.2"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
